api documentation & testing updates
