# brokerService/src/routes/index.js
@@ -2,9 +2,8 @@ const express = require("express")
 const proxy = require("express-http-proxy")
 const {
    handleStream,
-   getAllADSMessages,
+   getADSMessages,
    getLatestADSMessages,
-   getADSMessagesByTime,
    subscribe,
    unsubscribe,
 } = require("../controllers")
@@ -17,9 +16,8 @@ router.all("/users/*", proxy(USER_PROXY))
 router.all("/auth/*", proxy(AUTH_PROXY))
 
 // Message Routes
-router.get("/message/ads", getAllADSMessages)
+router.get("/message/ads", getADSMessages)
 router.get("/message/ads/latest", getLatestADSMessages)
-router.post("/message/ads/time", getADSMessagesByTime)
 
 // Stream Routes
 router.post("/users/:id/devices/:deviceid/stream", handleStream)
